<resources>
    <string name="app_name">新年好</string>
    <string name="action_settings">设置</string>
    <string name="wish">写下你的新年愿望</string>
    <string name="weiBo_not_supported">不支持的微博客户端</string>
    <string name="weiChat_not_installed">未安装微信，分享失败</string>
    <string name="weiBo_not_installed">未安装微博，分享失败</string>
    <string name="share_success">分享成功</string>
    <string name="share_cancel">分享取消</string>
    <string name="share_fail">分享失败</string>
    <string name="share_deny">分享被拒绝</string>
    <string name="share_return">分享返回</string>
    <string name="wish_text">新年好</string>
    <string name="save_photo">是否将图片保存到系统图库</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="delete_fail">删除失败</string>
    <string name="version_error">安卓版本过低无法运行</string>
    <string name="text_too_long">你输入的字数已经到达限制</string>
    <string name="text_length_hint">还能输入10个字</string>
    <string name="text_on_start_up">我是萌萌哒的启动画面</string>
    <string name="wish_text_selection">请选择祝福语</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="select">选择</string>
    <string name="lucky">试试运气</string>
    <string name="select_picture">请选择拜年图片</string>
    <string name="long_press_hint">长按图片可查看大图</string>
    <string name="long_press_hint2">长按可自动生成贺卡</string>
    <string name="text_enter_hint">摇晃设备以清空文本，长按以重新选择默认祝福语</string>
    <string name="text_enter_not_available">输入祝福语不可用</string>
    <string name="need_permission">需要读写存储权限，请在设置中为应用添加读写存储后重试</string>
    <string name="camera_not_available">设备没有相机或者相机不可用</string>
    <string name="error">出现错误</string>
    <string name="save_hint">如果没有在图库中找到照片，请在DICM/Camera文件夹下寻找</string>
    <string name="skip_start_up_page">下次不再显示</string>
    <string name="info">提示</string>
    <string name="selecting">正在选择</string>
    <string name="generating">生成中，请稍候</string>
    <string name="about">关于</string>
    <string name="version">版本：</string>
    <string name="reserved_right">All Rights Reserved</string>
    <string name="you_can_enter">还能输入</string>
    <string name="words">个字</string>
    <string name="network_unavailable">网络不可用</string>
    <string name="wifi_not_enabled">检测到你正在使用移动网络,\n继续使用可能会产生流量费用\n是否继续？</string>
    <string name="gesture_instruction">在除启动页面的其他页面：\n画出“小于号”以返回主页面\n在主页面画出“w”以获得新年祝福</string>
    <string name="close">关闭</string>
    <string name="device_not_supported">设备不受支持</string>
    <string name="send_feedback">发送反馈</string>
    <string name="name">姓名：</string>
    <string name="name_hint">请输入姓名</string>
    <string name="email">Email：</string>
    <string name="email_hint">请输入Email</string>
    <string name="feedback">反馈内容（*）：</string>
    <string name="feedback_hint">吐槽、表扬、鼓励……想说啥就说啥！</string>
    <string name="required">*为必填项</string>
    <string name="enter_feedback">请输入反馈内容</string>
    <string name="begin_send">开始发送</string>
    <string name="feedback_success">反馈成功</string>
    <string name="feedback_fail">反馈失败</string>
    <string name="anonymous">匿名</string>
    <string name="sending">正在发送</string>
    <string name="auto_reply_subject">反馈成功</string>
    <string name="auto_reply_content">感谢反馈\n此邮件为自动回复邮件请不要直接回复本邮件</string>
    <string name="feedback_subject">反馈</string>
    <string name="feedback_content">反馈内容：</string>
    <string name="close_slide_menu">请关闭侧滑菜单后重试</string>
    <string name="gesture_instruction_title">手势操作指南</string>

</resources>
