<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.gesture.GestureOverlayView
        android:id="@+id/gestureViewPicSelect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gestureColor="@android:color/transparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/select_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/select_picture"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.imooc.run.newyear.FlowRadioGroup
                android:id="@+id/pics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/select_picture"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:id="@+id/pic1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
					android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:checked="true"
                    android:drawableTop="@drawable/pic1" />

                <RadioButton
                    android:id="@+id/pic2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:drawableTop="@drawable/pic2" />

                <RadioButton
                    android:id="@+id/pic3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:drawableTop="@drawable/pic3" />

                <RadioButton
                    android:id="@+id/pic4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:drawableTop="@drawable/pic4" />

                <RadioButton
                    android:id="@+id/pic5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:drawableTop="@drawable/pic5" />

                <RadioButton
                    android:id="@+id/pic6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:drawableTop="@drawable/pic6" />

            </com.imooc.run.newyear.FlowRadioGroup>

            <LinearLayout
                android:id="@+id/buttons"
                style="?android:buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pics"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/confirm"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/confirm" />

                <Button
                    android:id="@+id/cancel"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

            </LinearLayout>

            <Button
                android:id="@+id/random_select"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttons"
                android:layout_centerHorizontal="true"
                android:text="@string/lucky" />
        </RelativeLayout>

    </android.gesture.GestureOverlayView>

</RelativeLayout>